Sat Jan  3 11:09:51 CST 1998 Shawn T. Amundson <amundson@gimp.org>

	* gtk/gtkscrolledwindow.c: initialize scrollbar_spacing
	  (gtk-fortier-980103-0)

Sat Jan  3 10:15:08 1998  Scott Goehring  <scott@poverty.bloomington.in.us>

	* configure.in: fixed a typo (no_xext_lib, not no_ext_lib).

Sat Jan  3 00:41:28 PST 1998 Manish Singh <yosh@gimp.org>

	* gtk/gtkentry.c:
	* gtk/gtkentry.h: applied Gordon Matzigkeit's patch to add
	fixed-length entry fields (gtk_entry_new_with_max_length)
	
Fri Jay  2 23:52 PST 1998 Jay Painter <jpaint@serv.net>
	* reverted glibconfig.h and glib.h files back to the
	way they were before my ugly hack
	* gtk/gtkclist.c:
	* glib/gscanner.c: removed inlines from clist and gscanner

Fri Jan  2 23:55:24 CST 1998 Shawn T. Amundson <amundson@gimp.org>

	* Several portability fixes from Michael Callahan 
          <callahan@xmission.com> including adding in missing
 	  #includes and adding void in function prototypes.

Fri Jan  2 19:28:52 1988 Jay Painter <jpaint@serv.net>
	* gtk/gtkclist.h:
	* gtk/gtkclist.c:
	* gtk/gtk.h:
	* gtk/testgtk.c:
	* gtk/testgtkrc: added GtkCList, column list widget, and a small test
	to testgtk

Fri Jan  2 15:42:51 1998  Federico Mena  <federico@bananoid.nuclecu.unam.mx>

	* gtk/gtkmain.c (gtk_main_iteration): Make the big switch handle
	GDK_NO_EXPOSE and GDK_VISIBILITY_NOTIFY events.

Fri Jan  2 12:07:33 CST 1998 Shawn T. Amundson <amundson@gimp.org>

	* gtk/gtkviewport.c: corrects a small resize bug in the 
          viewport widget.  The viewport widget provides a _set_shadow 
          function to draw its shadows. But if GTK_SHADOW_NONE is sent 
          to this function, the viewport isn't resized correctly (it's 
          still considered as a shadowed widget).  (gtk-fortier-971213-0)

	* gtk/gtknotebook.c: this patch fixes the redraw problems of 
          notebook tabs, without using gdk_gc_set_clip_rectangle.
          (gtk-hamann_jeske-971218-0)
 
	* add gtk_widget_(show/hide)_all (Stefan Wille)